--- a/src/javafxmlapplication/view/Main.fxml
+++ b/src/javafxmlapplication/view/Main.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SuperApp" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -22,12 +23,12 @@
       </Text>
    </top>
    <left>
-      <VBox alignment="TOP_CENTER" prefHeight="530.0" prefWidth="194.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="530.0" prefWidth="230.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane prefHeight="110.0" prefWidth="134.0">
+            <GridPane prefHeight="129.0" prefWidth="205.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="97.0" minWidth="10.0" prefWidth="94.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="111.0" minWidth="10.0" prefWidth="111.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="80.60000457763672" minHeight="10.0" prefHeight="73.0" vgrow="SOMETIMES" />
@@ -36,52 +37,63 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Text fx:id="nameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Surname, Name)">
+                        <Text fx:id="nameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Surname, Name)" wrappingWidth="100.0">
                            <font>
-                              <Font size="10.0" />
+                              <Font size="14.0" />
                            </font>
                         </Text>
-                        <Text fx:id="mailLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Email)">
+                        <Text fx:id="mailLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Email)" wrappingWidth="100.0">
                            <font>
-                              <Font size="10.0" />
+                              <Font size="14.0" />
                            </font>
                         </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
                   </VBox>
-                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="40.0" text="✎" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button fx:id="editButton" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="40.0" text="✎" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Button>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <ImageView fx:id="profilePicture" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
-                        <Text fx:id="usernameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Username)">
-                           <VBox.margin>
-                              <Insets left="5.0" top="2.0" />
-                           </VBox.margin>
-                        </Text>
+                        <ImageView fx:id="profilePicture" fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </VBox>
+                  <Text fx:id="usernameLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="(Username)" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" left="20.0" right="5.0" top="20.0" />
                </VBox.margin>
             </GridPane>
-            <Button fx:id="generateReportButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onGenerateReportPressed" prefHeight="26.0" prefWidth="122.0" text="Generate report" />
-            <Button fx:id="manageCategoryButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onManageCategoryPressed" prefHeight="26.0" prefWidth="122.0" text="Manage categories" />
-            <Button fx:id="compareExpenseButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCompareExpensePressed" prefHeight="26.0" prefWidth="122.0" text="Compare expenses" />
+            <VBox spacing="10.0">
+               <children>
+                  <Separator prefWidth="200.0" />
+                  <Button fx:id="generateReportButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onGenerateReportPressed" prefHeight="30.0" prefWidth="150.0" text="Generate report" />
+                  <Button fx:id="manageCategoryButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onManageCategoryPressed" prefHeight="30.0" prefWidth="150.0" text="Manage categories" />
+                  <Button fx:id="compareExpenseButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCompareExpensePressed" prefHeight="30.0" prefWidth="150.0" text="Compare expenses" />
+               </children>
+            </VBox>
          </children>
          <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets left="20.0" />
          </BorderPane.margin>
       </VBox>
    </left>
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="addButton" maxWidth="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" onAction="#addExpense" prefHeight="30.0" prefWidth="578.0" text="+">
+            <Button fx:id="addButton" maxWidth="1000.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#addExpense" prefHeight="30.0" prefWidth="570.0" text="+">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </Button>
-            <ListView fx:id="expenseList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+            <ListView fx:id="expenseList" maxHeight="500.0" maxWidth="1000.0" minWidth="600.0">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
@@ -97,7 +109,7 @@
       </VBox>
    </center>
    <right>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+      <VBox prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <Button fx:id="logOutButton" mnemonicParsing="false" onAction="#onLogOutPressed" prefHeight="30.0" prefWidth="40.0" text="←]" BorderPane.alignment="CENTER_LEFT">
