--- a/src/javafxmlapplication/view/ModifyCategory.fxml
+++ b/src/javafxmlapplication/view/ModifyCategory.fxml
@@ -1,19 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="224.0" prefWidth="600.0" stylesheets="@../styles/stylesheet.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
+
+<Pane fx:id="pane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ModifyCategoryController">
    <children>
-      <TextField fx:id="nameText" layoutX="120.0" layoutY="41.0" prefHeight="25.0" prefWidth="232.0" />
-      <TextField fx:id="descriptionText" layoutX="120.0" layoutY="100.0" prefHeight="25.0" prefWidth="425.0" />
-      <Text layoutX="59.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-      <Text layoutX="45.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
-      <ColorPicker fx:id="colorPicker" layoutX="406.0" layoutY="41.0" />
-      <Button fx:id="acceptButton" layoutX="225.0" layoutY="167.0" mnemonicParsing="false" onAction="#acceptAction" prefHeight="25.0" prefWidth="52.0" text="Save" />
-      <Button fx:id="cancelButton" layoutX="326.0" layoutY="167.0" mnemonicParsing="false" onAction="#cancelAction" text="Cancel" />
+      <VBox alignment="CENTER" prefHeight="250.0" prefWidth="600.0" spacing="50.0">
+         <children>
+            <HBox alignment="CENTER" spacing="50.0">
+               <children>
+                  <HBox spacing="10.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+                        <TextField fx:id="nameText" prefHeight="25.0" prefWidth="232.0" />
+                     </children>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </HBox>
+                  <ColorPicker fx:id="colorPicker" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description" />
+                  <TextField fx:id="descriptionText" prefHeight="25.0" prefWidth="425.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" spacing="50.0">
+               <children>
+                  <Button fx:id="acceptButton" mnemonicParsing="false" onAction="#acceptAction" prefHeight="25.0" prefWidth="52.0" text="Save" />
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" text="Cancel" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
-</AnchorPane>
+</Pane>
