--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -9,19 +9,23 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
+<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="40.0">
+            <HBox alignment="CENTER" prefHeight="60.0" prefWidth="200.0" spacing="30.0">
                <children>
-                  <HBox alignment="CENTER" spacing="30.0">
+                  <HBox alignment="CENTER" spacing="20.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name:" />
                         <TextField fx:id="nameField" prefHeight="25.0" prefWidth="250.0" />
                      </children>
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
                   </HBox>
                   <HBox alignment="CENTER" spacing="10.0">
                      <children>
@@ -53,11 +57,14 @@
                   </HBox>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="200.0" prefWidth="200.0">
+            <HBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <HBox fillHeight="false">
+                  <HBox fillHeight="false" spacing="5.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" wrappingWidth="101.0" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description:">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin></Text>
                         <TextField fx:id="descriptionField" alignment="TOP_LEFT" prefHeight="150.0" prefWidth="560.0" />
                      </children>
                      <opaqueInsets>
@@ -66,6 +73,9 @@
                      <padding>
                         <Insets top="25.0" />
                      </padding>
+                     <HBox.margin>
+                        <Insets left="130.0" />
+                     </HBox.margin>
                   </HBox>
                </children>
                <opaqueInsets>
@@ -74,19 +84,25 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="addInvoiceButton" mnemonicParsing="false" onAction="#onAddInvoicePressed" text="Add invoice">
+                  <Button fx:id="addInvoiceButton" mnemonicParsing="false" onAction="#onAddInvoicePressed" prefHeight="30.0" text="Add invoice">
                      <HBox.margin>
                         <Insets left="120.0" />
                      </HBox.margin>
                   </Button>
-                  <Text fx:id="invoiceText" strokeType="OUTSIDE" strokeWidth="0.0" />
-                  <Text fx:id="deleteInvoice" onDragDetected="#deleteInvoiceAction" strokeType="OUTSIDE" strokeWidth="0.0" />
+                  <Text fx:id="invoiceText" strokeType="OUTSIDE" strokeWidth="0.0">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin></Text>
+                  <Text fx:id="deleteInvoice" onMousePressed="#deleteInvoiceAction" strokeType="OUTSIDE" strokeWidth="0.0">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin></Text>
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveAction" prefHeight="25.0" prefWidth="52.0" text="Save" />
-                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" text="Cancel" />
+                  <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveAction" prefHeight="30.0" prefWidth="52.0" text="Save" />
+                  <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancelAction" prefHeight="30.0" text="Cancel" />
                </children>
             </HBox>
          </children>
@@ -99,6 +115,21 @@
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update expenses" />
                </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="98.0" prefWidth="930.0">
+               <children>
+                  <Button fx:id="goBack" mnemonicParsing="false" onAction="#onGoBack" text="◄">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <StackPane.margin>
+                  <Insets left="20.0" />
+               </StackPane.margin>
             </HBox>
          </children>
       </StackPane>
