--- a/src/javafxmlapplication/view/expenseCard.fxml
+++ b/src/javafxmlapplication/view/expenseCard.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="cell" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ExpenseCardController">
+<HBox fx:id="cell" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ExpenseCardController">
    <children>
-      <VBox alignment="CENTER" fillWidth="false" prefWidth="100.0">
+      <VBox alignment="CENTER" fillWidth="false" maxWidth="120.0" minWidth="60.0" prefWidth="100.0">
          <children>
             <Circle fx:id="colorCircle" fill="DODGERBLUE" radius="20.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </VBox>
-      <VBox prefHeight="150.0" prefWidth="280.0" spacing="20.0">
+      <VBox maxWidth="1.7976931348623157E308" minWidth="200.0" prefHeight="150.0" prefWidth="280.0" spacing="20.0">
          <HBox.margin>
             <Insets />
          </HBox.margin>
@@ -30,7 +30,7 @@
             <Label fx:id="description" text="Description" />
          </children>
       </VBox>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="140.0">
+      <VBox alignment="CENTER" maxWidth="160.0" minWidth="100.0" prefHeight="150.0" prefWidth="140.0">
          <children>
             <Label fx:id="costLabel" text="Cost">
                <font>
@@ -39,7 +39,7 @@
             </Label>
          </children>
       </VBox>
-      <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="80.0">
+      <VBox alignment="TOP_RIGHT" maxWidth="80.0" minWidth="60.0" prefHeight="200.0" prefWidth="80.0">
          <children>
             <Button fx:id="threeDotButton" mnemonicParsing="false" onAction="#onButtonPressed" text="⋮" />
          </children>
