--- a/src/javafxmlapplication/view/ExpenseAccount.fxml
+++ b/src/javafxmlapplication/view/ExpenseAccount.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ExpenseAccountController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.ExpenseAccountController">
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -38,7 +38,7 @@
                             <MenuItem fx:id="sameMonth" mnemonicParsing="false" onAction="#onSameMonth" text="Same month from last year" />
                           </items>
                         </MenuButton>
-                        <HBox alignment="CENTER_LEFT">
+                        <HBox alignment="CENTER_LEFT" prefWidth="430.0">
                            <children>
                               <ChoiceBox fx:id="categorySelector" prefWidth="150.0" />
                               <Button fx:id="clearButton" mnemonicParsing="false" onAction="#removeFilter" text="Clear">
@@ -56,7 +56,7 @@
                </padding>
             </HBox>
             <Separator prefWidth="200.0" />
-            <ListView fx:id="expenseList" prefHeight="200.0" prefWidth="200.0">
+            <ListView fx:id="expenseList" prefHeight="437.0" prefWidth="830.0">
                <VBox.margin>
                   <Insets left="50.0" right="50.0" top="20.0" />
                </VBox.margin>
@@ -77,7 +77,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonPressed" prefHeight="30.0" prefWidth="40.0" text="◄">
+                  <Button fx:id="backButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onBackButtonPressed" prefHeight="35.0" prefWidth="40.0" text="◄">
                      <font>
                         <Font size="18.0" />
                      </font>
