--- a/src/javafxmlapplication/view/Main.fxml
+++ b/src/javafxmlapplication/view/Main.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SuperApp" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -93,7 +93,7 @@
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </Button>
-            <ListView fx:id="expenseList" maxHeight="500.0" maxWidth="1000.0" minWidth="600.0">
+            <ListView fx:id="expenseList" maxHeight="500.0" maxWidth="1000.0" minWidth="600.0" prefHeight="462.0" prefWidth="660.0">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
