--- a/src/javafxmlapplication/view/Main.fxml
+++ b/src/javafxmlapplication/view/Main.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.MainController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="SuperApp" BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -54,7 +55,7 @@
                   </VBox>
                   <Button fx:id="editButton" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="40.0" text="✎" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                      <font>
-                        <Font size="16.0" />
+                        <Font size="18.0" />
                      </font></Button>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
@@ -86,27 +87,64 @@
       </VBox>
    </left>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <HBox spacing="20.0">
          <children>
-            <Button fx:id="addButton" maxWidth="1000.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#addExpense" prefHeight="30.0" prefWidth="570.0" text="+">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </Button>
-            <ListView fx:id="expenseList" maxHeight="500.0" maxWidth="1000.0" minWidth="600.0">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
+            <ListView fx:id="expenseList" maxHeight="800.0" maxWidth="1000.0" minWidth="360.0" prefHeight="600.0" HBox.hgrow="ALWAYS">
                <padding>
                   <Insets bottom="20.0" />
                </padding>
             </ListView>
-            <Accordion />
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+               <children>
+                  <Button fx:id="addButton" maxHeight="-Infinity" maxWidth="80.0" mnemonicParsing="false" onAction="#addExpense" prefHeight="50.0" prefWidth="50.0">
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../styles/resources/plus.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="editButton" maxHeight="-Infinity" maxWidth="80.0" mnemonicParsing="false" onAction="#onEdit" prefHeight="50.0" prefWidth="50.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../styles/resources/boton-editar.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="deleteButton" maxHeight="30.0" maxWidth="80.0" mnemonicParsing="false" onAction="#onDelete" prefHeight="30.0" prefWidth="30.0">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                     <graphic>
+                        <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../styles/resources/borrar.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+               <HBox.margin>
+                  <Insets top="50.0" />
+               </HBox.margin>
+            </VBox>
          </children>
          <BorderPane.margin>
-            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </BorderPane.margin>
-      </VBox>
+      </HBox>
    </center>
    <right>
       <VBox prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
