--- a/src/javafxmlapplication/view/UpdateExpense.fxml
+++ b/src/javafxmlapplication/view/UpdateExpense.fxml
@@ -9,9 +9,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
+<BorderPane prefHeight="620.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxmlapplication.controller.UpdateExpenseController">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
@@ -110,18 +111,25 @@
    <top>
       <StackPane prefHeight="81.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="98.0" prefWidth="930.0">
+            <HBox alignment="CENTER" prefHeight="98.0" prefWidth="930.0" visible="false">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Update expenses" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="98.0" prefWidth="930.0">
+            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="98.0" prefWidth="930.0" visible="false">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <StackPane.margin>
                   <Insets left="20.0" />
                </StackPane.margin>
+               <children>
+                  <Button fx:id="goBackButton" mnemonicParsing="false" onAction="#onGoBack" text="◄">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
             </HBox>
          </children>
       </StackPane>
